[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valohai-utils"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Valohai", email = "hait@valohai.com" },
]
dependencies = [
    "requests",
    "valohai-papi>=0.1.1",
    "valohai-yaml>=0.47.0",
]

[tool.hatch.version]
path = "valohai/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/valohai",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/valohai",
]


[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "E501",
    "RET504",
    "SIM105",
]
extend-select = [
    "C9",
    "E",
    "F",
    "RET",
    "SIM",
    "T2",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]

[tool]
[tool.mypy]
exclude = "tests/*"

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]

[tool.coverage.run]
omit = ["*site-packages*", "setup.py"]
