[metadata]
name = valohai-utils
author = Valohai
version = attr:valohai.__version__
author_email = hait@valohai.com
license = MIT

[options.packages.find]
include =
    valohai*

[options]
packages = find:
install_requires =
    tqdm
    requests
    valohai-yaml>=0.13.0
    valohai-papi>=0.1.1
python_requires = >=3.6
include_package_data = True

[bdist_wheel]
universal = 0

[flake8]
ignore = E501,W503,SIM105,SIM106,R504
max-complexity = 10
per-file-ignores =
    tests/*: T001,T002,T003,T004

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
norecursedirs = .git .tox

[isort]
profile = black

[coverage:run]
omit =
	*site-packages*
	setup.py
