[metadata]
name = valohai-utils
author = Valohai
version = attr:valohai.__version__
author_email = hait@valohai.com
license = MIT

[options.packages.find]
include =
    valohai*

[options]
packages = find:
install_requires =
    tqdm
    requests
    valohai-yaml>=0.22.0
    valohai-papi>=0.1.1
python_requires = >=3.7
include_package_data = True
